--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.sourse>1.8</maven.compiler.sourse>
 		<maven.complier.target>1.8</maven.complier.target>
+		<extentreports-version>5.0.8</extentreports-version>
+		<aspectj.version>1.9.5</aspectj.version>
 	</properties>
 
 	<dependencies>
